--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   shared_preferences: ^2.0.15
   firebase_core: ^1.20.0
   firebase_auth: ^3.6.2
+  firebase_storage: ^10.3.4
+  cloud_firestore: ^3.4.3
 
 dev_dependencies:
   flutter_test:
