--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.6 <3.0.0"
+  sdk: ">=2.17.5 <3.0.0"
 
 dependencies:
   flutter:
@@ -20,6 +20,10 @@ dependencies:
   firebase_storage: ^10.3.4
   cloud_firestore: ^3.4.3
   device_info_plus:
+  url_launcher: ^6.1.5
+  share_plus: ^4.0.10+1
+  firebase_messaging: ^13.0.0
+  flutter_local_notifications: ^9.8.0+1
 
 dev_dependencies:
   flutter_test:
