--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>515701131981-jnl3crd0v350dfvebo8oiu2pe3qqvec3.apps.googleusercontent.com</string>
+	<string>885985648143-bfqvsktael5brcnfgpedm711v2sjgbv3.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.515701131981-jnl3crd0v350dfvebo8oiu2pe3qqvec3</string>
+	<string>com.googleusercontent.apps.885985648143-bfqvsktael5brcnfgpedm711v2sjgbv3</string>
 	<key>API_KEY</key>
-	<string>AIzaSyA6bqwvxeLXSLZlvGByaFNLuzZowWIHYqQ</string>
+	<string>AIzaSyDbYx4PKUxr1rlkahiqYfjUFTw39Z4MSXo</string>
 	<key>GCM_SENDER_ID</key>
-	<string>515701131981</string>
+	<string>885985648143</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>uz.pdp.flutterMyinsta</string>
 	<key>PROJECT_ID</key>
-	<string>flutter-myinsta-e8051</string>
+	<string>flutter-myinsta-clone</string>
 	<key>STORAGE_BUCKET</key>
-	<string>flutter-myinsta-e8051.appspot.com</string>
+	<string>flutter-myinsta-clone.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:515701131981:ios:d2097c019799f8638a7784</string>
+	<string>1:885985648143:ios:e5514095eda535685a4d7a</string>
 </dict>
 </plist>
