--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,10 @@ dependencies:
   fluttertoast: ^8.0.9
   shared_preferences: ^2.0.15
   firebase_core: ^1.20.0
-  firebase_auth: ^3.6.2
+  firebase_auth: ^3.3.13
   firebase_storage: ^10.3.4
+  firebase_messaging: ^12.0.3
+  flutter_local_notifications: ^9.8.0+1
   cloud_firestore: ^3.4.3
   device_info_plus:
 
